Refactor and rename

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ImageProcessingActivity"
+            android:name=".image_processing.ImageProcessingActivity"
             android:screenOrientation="portrait" />
 
     </application>
