--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,7 +32,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".room_sample.RoomActivity"
+            android:name=".room_sample.ui.RoomActivity"
             android:screenOrientation="portrait" />
     </application>
 
